# mancala

./: mancala.cabal
src/: Main.hs
