
name:           mancala
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013 Karl Voelker
author:         Karl Voelker
maintainer:     mancala@karlv.net
stability:      experimental
bug-reports:    mailto:mancala@karlv.net
synopsis:       Mancala
category:       Game
tested-with:    GHC == 7.6.3

Executable mancala
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base                 >= 4    && < 5,
    array                >= 0.4  && < 0.5,
    containers           >= 0.5  && < 0.6,
    text                 >= 0.11 && < 0.12,
    mtl                  >= 2.1  && < 2.2
  default-extensions:
    TupleSections
    ScopedTypeVariables
    FlexibleInstances
    FlexibleContexts
    GADTs
    LambdaCase
    OverloadedStrings
    ViewPatterns
    RecordWildCards
  other-extensions:
    TemplateHaskell

